[gd_scene load_steps=9 format=3 uid="uid://cmnysfwppm7q6"]

[ext_resource type="Script" path="res://Singletons/scene_container.gd" id="1_ww1og"]
[ext_resource type="PackedScene" uid="uid://00l80mhoa7va" path="res://Camera/camera_advanced.tscn" id="2_n6nuo"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="2_ppg17"]
[ext_resource type="Texture2D" uid="uid://caf7vt23vgqb2" path="res://Menus/border.png" id="3_dywdi"]
[ext_resource type="PackedScene" uid="uid://llwvcsnw2bb4" path="res://Singletons/settings.tscn" id="4_7ek2v"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0mhky"]
viewport_path = NodePath("SettingsContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_82q3m"]
shader = ExtResource("2_ppg17")
shader_parameter/lod = 1.0

[sub_resource type="ViewportTexture" id="ViewportTexture_w8dkw"]
viewport_path = NodePath("SubViewportContainer/MainViewport")

[node name="Scenes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ww1og")

[node name="ScreenCopy" type="TextureRect" parent="."]
modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("ViewportTexture_0mhky")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_82q3m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 240)
mouse_filter = 2

[node name="MainViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="GlobalCamera" parent="SubViewportContainer/MainViewport" instance=ExtResource("2_n6nuo")]
unique_name_in_owner = true
process_mode = 3

[node name="SettingsContainer" type="SubViewportContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 240)

[node name="SubViewport" type="SubViewport" parent="SettingsContainer"]
process_mode = 3
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="TextureRect" type="TextureRect" parent="SettingsContainer/SubViewport"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("ViewportTexture_w8dkw")

[node name="Settings" parent="SettingsContainer/SubViewport" instance=ExtResource("4_7ek2v")]
layer = 100

[node name="Border" type="NinePatchRect" parent="SettingsContainer"]
custom_minimum_size = Vector2(640, 480)
layout_mode = 2
texture = ExtResource("3_dywdi")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[connection signal="setting_changed" from="SettingsContainer/SubViewport/Settings" to="." method="_on_settings_setting_changed"]
